--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
-    "kitsu": "^5.0.7",
     "morgan": "^1.9.0",
+    "node-kitsu": "^1.0.1",
     "nyaapi": "^2.0.5",
     "redis": "^2.8.0",
     "slug": "^0.9.1"
