--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5000:5000"
     env_file:
-      - .env
+      - .env.prod
     networks:
       - redis-net
     depends_on:
