--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
+    "hs-calendar": "git+https://github.com/tanukiapp/hs-calendar.git",
     "morgan": "^1.9.0",
     "node-kitsu": "^1.0.1",
     "nyaapi": "^2.0.5",
