--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,17 @@ services:
       - "5555:5000"
     env_file:
       - .env.prod
-    networks:
-      - redis-net
     depends_on:
+      - redis
+    links:
       - redis
     restart: always
   redis:
     image: "redis:alpine"
     command: ["redis-server", "--appendonly", "yes"]
     hostname: redis
-    networks: 
-      - redis-net
     volumes:
       - redis-data:/data
-
-networks: 
-  redis-net:
 
 volumes:
   redis-data:
