--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,9 +2,9 @@ version: '3'
 services:
   node_dev:
     build: .
-    command: npm run dev
+    command: npm start
     volumes:
-      - .:/usr/app
+      - .:/usr/src/app
     ports:
       - "5000:5000"
     env_file:
